# shdevelopment

./: README.md
Imgeneus-master/: .gitignore  .gitmodules  Login.Dockerfile  World.Dockerfile  azure-pipelines-linux.yml
actionlog/: PS_GameLog.sql  dbo.ActionLog.sql  dbo.Boss_Death_Log.sql  dbo.Char_Enter_Leave_Log.sql  dbo.Command_Log.sql  dbo.Death_Log.sql  dbo.Illegal_Lapis_Link_Log.sql  dbo.Illegal_Transaction_Log.sql  dbo.Kill_Log.sql  dbo.Transaction_Log.sql  dbo.usp_Insert_Action_Log_E.sql  usp_Insert_Action_Log_E.sql
advancedproject/: Config.ini  MultiClient.bat  Version.ini
ep1/: DLLS_PHP-SQLServer_2019-2022.rar
imgeneus/: Imgeneus.sln  README.md  azure-pipelines-windows.yml  deploy-login.yaml  deploy-world.yaml  docker-compose.yml
ingameservices/: Add1_Perfect_Orange_Stats.sql  Base_Perfect_Orange_Stats.sql  Kill_and_Death_Transfer.sql  README.md
libclient-master/: Cargo.toml  LICENSE  README.md
libclient-master/.github/workflows/: build.yaml
libclient-master/src/: fs.rs  io.rs
libclient-master/tests/: from_path_test.rs
libcups/: ShaiyaLibrary.sln
shaiya-adminpanel/: build.xml
shaiya-solutions-master/: client version solution.ct  remove apostrophes.sql
sqlsrv/: AP_ticketusp_Insert_Action_Log_E.sql  AbilityType EP6.4.sql  Drops.sql  Global Reset Skill-Stat.sql  MobSkills_EP4.5.sql  Parte 1.sql  Parte 2.sql  Parte 3.sql  Parte 4.sql  Parte 5.sql  Parte 6.sql  Perfect Orange Stats.sql  RemoverTRRDosInventáriosEDepósitos.sql  RunaBattlefield.sql  SQLKeepBuff.sql  SQLRemoveLapisCapaLv2.sql  Skill_EP4.5.sql  Transferência de Kill.sql  (+2 more)
(+1262 files in other folders)
