[package]
name    = "libclient"
version = "0.1.0"
edition = "2021"
authors = ["ptr64"]

[lib]
name    = "libclient"
path    = "src/lib.rs"

[dependencies.anyhow]
version = "1.0"

[dependencies.bytes]
version = "1.1.0"

[dependencies.byteorder]
version = "1.4.3"

[dependencies.crc]
version = "3.0.0"

[dependencies.rayon]
version = "1.5.3"

[dependencies.tempfile]
version = "3.3.0"

[dependencies.thiserror]
version = "1.0"
